<resources>
    <string name="app_name">Canary</string>
    <string name="contacts">Contacts</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="save_contact">Save Contact</string>
    <string name="delete">Delete</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="default_message">Add a contact to customize your custom message </string>
    <string name="sensor_message">Shake Phone If Emergency</string>
    <string name="your_message">Your Message</string>
    <string name="review">Review</string>
    <string name="fab_contact_description">add contact button</string>
    <string name="map_key" translatable="false">Enter your google API key here</string>
</resources>